fixed ad spacing

--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -10013,9 +10013,10 @@ img.alignleft {
 .article-ad-content {
   width: 100%;
   max-width: 300px;
-  height: 250px;
+  height: 100%;
   margin-left: auto;
   margin-right: auto;
+  overflow: hidden;
   background-color: #fff;
 }
 @media (min-width: 820px) {
@@ -10025,7 +10026,7 @@ img.alignleft {
   }
 }
 
-/* line 40, ../scss/components/_article-aside-ad.scss */
+/* line 41, ../scss/components/_article-aside-ad.scss */
 .aside-ad-hdr {
   color: #908b8c;
   text-align: center;
